# syntaxdot-python

./: .gitignore  Cargo.toml  flake.nix  setup.py
.github/workflows/: python.yml
src/: annotator.rs  lib.rs  sentence.rs
syntaxdot/: __init__.py  model_archive.py
